# hcrawler-sentinel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  USAGE.md  hcrawler.py  pyproject.toml  report.html  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  ascii_gallery.md  pitch.md  plugin-development.md  portfolio.md  security-policy.md  sentinel-features.md  terminal-style.md
examples/: ci-policy-config.yaml  deep-audit-config.yaml  local-test-site.md  portfolio-config.yaml  scope.txt
hcrawler/: __init__.py  analyzer.py  async_core.py  cli.py  config.py  console.py  constants.py  core.py  diff.py  doctor.py  exporters.py  inventory.py  metrics.py  models.py  patterns.py  policy.py  profiles.py  robots.py  scope.py  sitemap.py  theme.py  urltools.py
hcrawler/plugins/: __init__.py  accessibility.py  privacy.py  seo.py
tests/: test_diff_metrics_policy.py  test_inventory_scope.py  test_patterns.py  test_urltools.py
